# unfold

./: .gitignore  .pre-commit-config.yaml  LICENSE  PLAN.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/unfold/: config.py  errors.py  report.py  session.py  utils.py
src/unfold/agent/: __init__.py  core.py  prompts.py  usage.py
src/unfold/cli/: main.py
src/unfold/ghidra/: __init__.py  bridge.py  project.py
src/unfold/tools/: __init__.py  file_tools.py  ghidra_tools.py
tests/: __init__.py  conftest.py  test_agent.py  test_bridge.py  test_cli.py  test_config.py  test_prompts.py  test_report.py  test_session.py  test_tools.py  test_usage.py
tests/fixtures/: __init__.py  mock_data.py
