[project]
name = "unfold"
version = "0.1.0"
description = "AI-powered reverse engineering assistant"
authors = [
    { name = "Amaan", email = "goamaan12@gmail.com" }
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "anthropic",
    "rich",
    "click",
    "pyghidra>=3.0.2",
    "openai>=2.17.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Security",
]

[project.urls]
Homepage = "https://github.com/goamaan/unfold"
Repository = "https://github.com/goamaan/unfold"

[project.scripts]
unfold = "unfold.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/unfold"]
